[project]
name = "rebuildah"
description = "Thoth's rebuilding Release Engineer"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
